# BRILDAQW-niVISA

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.in  CMakeLists.txt  README.md
config/: tekscopecfg.xml  version.h.in
doxygen/: Doxyfile  Doxyfile.in
include/: interface.hpp  tekscope.hpp  tekscopecfg.hpp
src/: gain_optimizer.cpp  interface.cpp  main.cpp  readWave.cpp  run_calibration.cpp  tekscope.cpp  tekscopecfg.cpp  testBench.cpp
test/: tekscope_devtest.cpp
